fixed sub page layout bug

--- a/web/packages/realtor/css/app.css
+++ b/web/packages/realtor/css/app.css
@@ -1186,7 +1186,7 @@ html.cms-edit-mode div.row > div {
         list-style: none;
         padding: 0 30px;
         margin: 0;
-        width: 50%;
+        width: 49%;
         display: inline-block;
         vertical-align: top; }
         .pg-landing #c-level-1 section.subnav div.pagelist ul li a {
