--- a/web/packages/realtor/css/src/page_types/landing.scss
+++ b/web/packages/realtor/css/src/page_types/landing.scss
@@ -48,7 +48,7 @@ $landing-masthead-height: 470px;
             -webkit-transition: all 500ms ease-out;-moz-transition: all 500ms ease-out;-o-transition: all 500ms ease-out;transition: all 500ms ease-out;
             span { font-size: 12em;color: $theme-color-brown; }
             ul { list-style: none;padding: 0;margin: 0 auto;display: inline-block;width: 100%;height: 100%;max-width: 1000px;
-                li { list-style: none;padding: 0 30px;margin: 0;width: 50%;display: inline-block;vertical-align: top;
+                li { list-style: none;padding: 0 30px;margin: 0;width: 49%;display: inline-block;vertical-align: top;
                     a { width: 100%;display: block;padding: 10px 0;color: $theme-color-brown;font-family: $theme-font-family-headers;
                         &:hover { color:$theme-color-red;text-decoration: none; }
                         div.pg-icon { overflow: hidden;padding-bottom: 58%;display: block;background-size: cover;background-position: 70% 50%;height: 100%;width: 100%;max-width: 475px; }
